content/_generated-doc/2.16/config/quarkus-configuration-configuration-configuration-runtime-config.adoc

:summaryTableId: quarkus-configuration-configuration-configuration-runtime-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-configuration-configuration-configuration-runtime-config_configuration]]link:#quarkus-configuration-configuration-configuration-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-configuration-configuration-configuration-runtime-config_quarkus.configuration.build-time-mismatch-at-runtime]]`link:#quarkus-configuration-configuration-configuration-runtime-config_quarkus.configuration.build-time-mismatch-at-runtime[quarkus.configuration.build-time-mismatch-at-runtime]`

[.description]
--
What should happen if the application is started with a different build time configuration than it was compiled against. This may be useful to prevent misconfiguration. 
If this is set to `warn` the application will warn at start up. 
If this is set to `fail` the application will fail at start up. 
Native tests leveraging`@io.quarkus.test.junit.TestProfile` are always run with `quarkus.configuration.build-time-mismatch-at-runtime = fail`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONFIGURATION_BUILD_TIME_MISMATCH_AT_RUNTIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONFIGURATION_BUILD_TIME_MISMATCH_AT_RUNTIME+++`
endif::add-copy-button-to-env-var[]
-- a|
`warn`, `fail` 
|`warn`

|===